objects/LBI__ScoringRuleClause__c.object
<CustomObject>
    <fields>
        <fullName>LBI__DatetimeHolder__c</fullName>
        <description>Used to properly store user specified datetimes for a clause, including timezone shifts.</description>
        <label>Datetime Holder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ScoringRule__c</fullName>
        <label>Lattice Scoring Rule</label>
        <referenceTo>LBI__ScoringRule__c</referenceTo>
        <relationshipLabel>Lattice Scoring Rule Clauses</relationshipLabel>
        <relationshipName>LatticeScoringRuleClauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Scoring Rule Clause</label>
    <nameField>
        <displayFormat>RC-{000000000}</displayFormat>
        <label>Scoring Rule Clause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Scoring Rule Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>